<resources>
<string name="app_name">ChainText</string>
<string name="digit">0</string>
<string name="_7">7</string>
<string name="_8">8</string>
<string name="_9">9</string>
<string name="_4">4</string>
<string name="_5">5</string>
<string name="_6">6</string>
<string name="_1">1</string>
<string name="_2">2</string>
<string name="_3">3</string>
<string name="_0">0</string>
<string name="dot">.</string>
<string name="reset">c</string>
<string name="sign">+-</string>
<string name="percent">%</string>
<string name="divide">/</string>
<string name="multiply">*</string>
<string name="minus">-</string>
<string name="plus">+</string>
<string name="equally">=</string>
    <string name="a">A</string>
    <string name="l">L</string>
    <string name="e">E</string>
    <string name="x">X</string>
    <string name="a">A</string>
    <string name="n">N</string>
    <string name="r">R</string>
    <string name="o">O</string>
    <string name="v">V</string>
    <string name="l">L</string>
    <string name="e">E</string>
    <string name="x">X</string>
    <string name="e">E</string>
    <string name="y">Y</string>
</resources>
